--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script defer src="./app.js"></script>
+    <script defer src="./analytics.js"></script>
   </head>
   <body>
     <button class="btn">Click Me</button>
