--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script defer src="./app.js"></script>
-    <script defer src="./analytics.js"></script>
+    <script defer src="./dist/app.js"></script>
   </head>
   <body>
     <button class="btn">Click Me</button>
